mobile fixes
- fixed roadmap image width;
- fixed background on menu toggler when menu was on top of the page;
- fixed menu toggler color;
- fixed issues with the #service grid;
- fixed banner logo being cropped at lower page widths;

--- a/css/style.css
+++ b/css/style.css
@@ -216,10 +216,12 @@ a:active {
     .hero-area start
 --*/
 .bg-1 {
-  background-image: url("../images/banner-master.jpg");
+  background-image: url("../images/banner-background.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: center; }
+    .bg-1 .img-responsive {
+		padding: 10px; }
 
 .bg-gray {
   background: #f8f8f8; }
@@ -280,18 +282,21 @@ a:active {
     padding-top: 5px;
     display: inline-block; }
   .navigation .navbar-toggler {
-    background: #fff;
     outline: none;
     border-radius: 0;
-    float: right; }
+    float: right; 
+	cursor: pointer; }
     .navigation .navbar-toggler i {
-      font-size: 22px; }
+      font-size: 22px; 
+	  color: #fff; }
 
 .navigation.animated {
   background-color: #fff;
   box-shadow: 0 2px 7px 0px rgba(142, 142, 142, 0.15); }
   .navigation.animated .menu a {
     color: #666; }
+  .navigation.animated .navbar-toggler i {
+	  color: #000; }
 
 .menu li a {
   color: #fff;
@@ -305,22 +310,27 @@ a:active {
 --*/
 .service {
   text-align: center; }
-  .service .block {
-    margin-bottom: 50px; }
-    .service .block i {
-      font-size: 30px;
-      display: inline-block;
-      margin-bottom: 15px;
-      color: #1bafb4; }
-    .service .block h3 {
-      color: #333333;
-      font-weight: 600;
-      font-size: 18px;
-      margin-bottom: 15px;
-      letter-spacing: 1px;
-      text-transform: uppercase; }
-    .service .block p {
-      color: #666; }
+  .service .flex-row {
+	  display: flex;
+	  flex-wrap: wrap; }
+	.service .heading {
+		width: 100% }
+    .service .block {
+      margin-bottom: 50px; }
+      .service .block i {
+        font-size: 30px;
+        display: inline-block;
+        margin-bottom: 15px;
+        color: #1bafb4; }
+      .service .block h3 {
+        color: #333333;
+        font-weight: 600;
+        font-size: 18px;
+        margin-bottom: 15px;
+        letter-spacing: 1px;
+        text-transform: uppercase; }
+      .service .block p {
+        color: #666; }
 
 /*--
     About start
@@ -452,3 +462,8 @@ footer {
       footer p a:hover {
         color: #fff;
         text-decoration: none; }
+
+.img-responsive {
+	max-width: 100%;
+}
+		
